2005-07-28  Derek Price  <derek@ximbiot.com>

	* NEWS: Note file name override, mediawiki example, and empty file
	name extension fix.

2005-07-28  Derek Price  <derek@ximbiot.com>

	* images/*.png: Restore these files, reversing change from 2005-07-19,
	since RMS has declared that any free license is OK for image files and
	other data that is a secondary part of a program.
	* NEWS: Remove note about images/* removal.

2005-07-25  Derek Price  <derek@ximbiot.com>

	* examples/mediawiki.init: New file.

2005-07-25  Derek Price  <derek@ximbiot.com>

	* texi2html.pl: Allow substitution of all document file names.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am (dist_images_DATA): Don't reference missing image files.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* texi2html.pl: Don't add the file extension when it is empty.  Some
	cleanup.

2005-07-19  Derek Price  <derek@ximbiot.com>

	* images/*: Remove these files since they are distributed under a
	license incompatible with the GPL.
	* NEWS: Note images/* removal.  Repair some grammar.
	s/Automake 1.9.3/1.9.5/.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* T2h_i18n.pm, check_texinfo.pl.in, manage_i18n.pl.in,
	missing-texi2html, texi2html.pl, doc/stamp-vti, doc/texi2html.1.in,
	doc/texi2html.html, doc/texi2html.texi, doc/version.texi,
	images/COPYING: Replace FSF copyright notices.

2005-07-08  Derek Price  <derek@ximbiot.com>

	* images/*.gif: Convert all these files to...
	* images/*.png: PNG format.
	* images/COPYING: Paste in full text of Creative Commons License.

2005-07-07  Derek Price  <derek@ximbiot.com>

	* COPYING, T2h_i18n.pm, check_texinfo.pl.in, manage_i18n.pl.in,
	texi2html.pl, missing-texi2html, doc/texi2html.texi: Update FSF address
	in Copyright notice and Copyright years.
	* INSTALL, install-sh, mdate-sh, missing, mkinstalldirs, doc/mdate-sh,
	doc/texinfo.tex: Update from Automake 1.9.5.
	* Makefile.in, aclocal.m4, doc/Makefile.in: Regenerated with
	Automake 1.9.5.
