@@ -51,6 +51,74 @@ dist_i18n_DATA = i18n/en \
 	i18n/no \
 	i18n/pt 
 
+dist_images_DATA = images/a_begin.png \
+	images/a_begin_na.png \
+	images/a_document.png \
+	images/a_document_na.png \
+	images/a_empty.png \
+	images/a_end.png \
+	images/a_end_na.png \
+	images/a_help.png \
+	images/a_help_na.png \
+	images/a_index.png \
+	images/a_index_na.png \
+	images/a_leftdouble.png \
+	images/a_leftdouble_na.png \
+	images/a_left.png \
+	images/a_left_na.png \
+	images/a_page.png \
+	images/a_page_na.png \
+	images/a_rightdouble.png \
+	images/a_rightdouble_na.png \
+	images/a_right.png \
+	images/a_right_na.png \
+	images/a_searchdoc.png \
+	images/a_searchdoc_na.png \
+	images/a_search.png \
+	images/a_search_na.png \
+	images/a_tableofcon.png \
+	images/a_tableofcon_na.png \
+	images/a_top.png \
+	images/a_top_na.png \
+	images/a_up.png \
+	images/a_up_na.png \
+	images/bg.jpg \
+	images/bg_left.png \
+	images/bg_right.png \
+	images/blue_dir.png \
+	images/blue_down.png \
+	images/blue_grab.png \
+	images/blue_help.png \
+	images/blue_next.png \
+	images/blue_nnext.png \
+	images/blue_pprev.png \
+	images/blue_prev.png \
+	images/blue_readme.png \
+	images/blue_top.png \
+	images/blue_up.png \
+	images/blue_uup.png \
+	images/contents_motif.png \
+	images/COPYING \
+	images/index_motif.png \
+	images/Mybg.png \
+	images/next_motif.png \
+	images/next_motif_gr.png \
+	images/previous_motif.png \
+	images/previous_motif_gr.png \
+	images/spacer3.png \
+	images/xy_contents.png \
+	images/xy_foot.png \
+	images/xy_next.png \
+	images/xy_next_gr.png \
+	images/xy_nextsection.png \
+	images/xy_nextsection_gr.png \
+	images/xy_previous.png \
+	images/xy_previous_gr.png \
+	images/xy_previoussection.png \
+	images/xy_previoussection_gr.png \
+	images/xy_up.png \
+	images/xy_up_gr.png
+
 #texi2html: $(texi2html_sources)
 #	sed -e "/@MYSIMPLE@/r $(srcdir)/MySimple.pm" \
 #	    -e "/@INIT@/r $(srcdir)/texi2html.init" \
